--- a/package.json
+++ b/package.json
@@ -1,8 +1,4 @@
 {
-  "dependencies": {
-    "autoprefixer": "^10.4.16",
-    "tailwindcss": "^3.3.6"
-  },
   "name": "laps-backend",
   "description": "",
   "version": "1.0.0",
@@ -11,14 +7,13 @@
     "doc": "docs"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "postcss": "^8.4.32",
-    "postcss-cli": "^11.0.0"
+    "postcss-cli": "^11.0.0",
+    "prettier": "^3.1.1",
+    "tailwindcss": "^3.3.6"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:css": "postcss src/main/resources/css/tailwind.css -o src/main/resources/css/styles.css",
-    "watch:css": "nodemon -e css,js -x \"npm run build:css\""
+    "watch:css": "tailwindcss -i src/main/resources/static/css/tailwind.css -o ./src/main/resources/static/css/styles.css --watch"
   },
   "keywords": [],
   "author": "",
