--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,12 @@
 #spring.jpa.hibernate.ddl-auto=update
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/MySQL?useSSL=false&serverTimezone=UTC
+# please change LAPS to your own database name
+spring.datasource.url=jdbc:mysql://localhost:3306/LAPS?useSSL=false&serverTimezone=UTC
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 #please change the username and password to your own
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=${MY_SQL_USERNAME}
+spring.datasource.password=${MY_SQL_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
