--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,4 @@
-## H2 Database Configuration
-#spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.jpa.hibernate.ddl-auto=update
+
 
 # MySQL Database Configuration
 # please change LAPS to your own database name
@@ -13,11 +7,5 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 #please change the username and password to your own
 spring.datasource.username=${MY_SQL_USERNAME}
 spring.datasource.password=${MY_SQL_PASSWORD}
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create
-
-# H2 Console Configuration can be removed if not needed
-spring.h2.console.enabled=false
-# H2 Console Configuration
-# spring.h2.console.enabled=true
-# spring.h2.console.path=/h2-console
